Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2839

RebalanceParamTest.Rebalance in attemp to get location for non-participant in a tablet's Raft configuration

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.10.0
    • 1.12.0
    • None
    • None

    Description

      The RebalanceParamTest.Rebalance test failed in DEBUG configuration with the following error:

      F0603 07:13:11.588726 15848 quorum_util.cc:167] Check failed: RaftPeerPB::NON_PARTICIPANT != GetConsensusRole(peer_uuid, cstate) (3 vs. 3) Peer 861adf9d6de84ed4ab78e87fd6a5a773 << not a participant in current_term: 26 leader_uuid: "541ac298bf2c47e0ad81b321a9c20b27" committed_config { opid_index: 22 OBSOLETE_local: false peers { permanent_uuid: "861adf9d6de84ed4ab78e87fd6a5a773" member_type: VOTER last_known_addr { host: "127.0.58.66" port: 33953 } attrs { replace: true } } peers { permanent_uuid: "ff4c06c5941c4e94859fa179a82ee2bc" member_type: VOTER last_known_addr { host: "127.0.58.68" port: 45965 } } peers { permanent_uuid: "541ac298bf2c47e0ad81b321a9c20b27" member_type: VOTER last_known_addr { host: "127.0.58.65" port: 41411 } } peers { permanent_uuid: "343f590c8f5b4fb79dd3610100f66427" member_type: VOTER last_known_addr { host: "127.0.58.72" port: 34089 } attrs { promote: false } } } pending_config { opid_index: 23 OBSOLETE_local: false peers { permanent_uuid: "ff4c06c5941c4e94859fa179a82ee2bc" member_type: VOTER last_known_addr { host: "127.0.58.68" port: 45965 } } peers { permanent_uuid: "541ac298bf2c47e0ad81b321a9c20b27" member_type: VOTER last_known_addr { host: "127.0.58.65" port: 41411 } } peers { permanent_uuid: "343f590c8f5b4fb79dd3610100f66427" member_type: VOTER last_known_addr { host: "127.0.58.72" port: 34089 } attrs { promote: false } } }
      

      Attachments

        1. rebalancer_tool-test.6.txt.xz
          600 kB
          Alexey Serbin
        2. rebalancer_tool-test.3.txt.xz
          226 kB
          Alexey Serbin

        Issue Links

          Activity

            People

              aserbin Alexey Serbin
              aserbin Alexey Serbin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: