[consensus] KUDU-2839 fix assert in GetParticipantRole()

Before this patch, the consistency check in GetParticipantRole() was
incorrect.  It tried to search for the replica UUID against pending
config, but replica UUID comes from committed config at the only call
site of the function in CatalogManager::BuildLocationsForTablet().

The pending Raft config might have replica already removed in case if
there is move/replace replica operation in progress.  The incorrect
assertion triggered here:
  http://dist-test.cloudera.org/job?job_id=aserbin.1577145505.5646

I also did a minor clean up of the code around.

This is a follow-up to 586e957f76a547340f2ab93a7eebc3f116ff825e.

Change-Id: I1a490f5b61dda8cebb8ee9bd9171ef3aa733a148
Reviewed-on: http://gerrit.cloudera.org:8080/14946
Tested-by: Kudu Jenkins
Reviewed-by: Bankim Bhavsar <bankim@cloudera.com>
Reviewed-by: Adar Dembo <adar@cloudera.com>